@@ -16,6 +16,9 @@ our $VERSION = 0.02;
 sub obj2struct {
 	my ($obj, $base_uri) = @_;
 
+	if (! defined $obj) {
+		err "Object doesn't exist.";
+	}
 	if (! $obj->isa('Wikibase::Datatype::Reference')) {
 		err "Object isn't 'Wikibase::Datatype::Reference'.";
 	}
@@ -85,6 +88,7 @@ Returns Wikibase::Datatype::Reference instance.
 
  obj2struct():
          Base URI is required.
+         Object doesn't exist.
          Object isn't 'Wikibase::Datatype::Reference'.
 
 =head1 EXAMPLE1
