@@ -16,6 +16,9 @@ our $VERSION = 0.02;
 sub obj2struct {
 	my $obj = shift;
 
+	if (! defined $obj) {
+		err "Object doesn't exist.";
+	}
 	if (! $obj->isa('Wikibase::Datatype::Sitelink')) {
 		err "Object isn't 'Wikibase::Datatype::Sitelink'.";
 	}
@@ -91,6 +94,7 @@ Returns Wikibase::Datatype::Sitelink instance.
 =head1 ERRORS
 
  obj2struct():
+         Object doesn't exist.
          Object isn't 'Wikibase::Datatype::Sitelink'.
 
 =head1 EXAMPLE1
