@@ -18,6 +18,9 @@ our $VERSION = 0.02;
 sub obj2struct {
 	my ($obj, $base_uri) = @_;
 
+	if (! defined $obj) {
+		err "Object doesn't exist.";
+	}
 	if (! $obj->isa('Wikibase::Datatype::Statement')) {
 		err "Object isn't 'Wikibase::Datatype::Statement'.";
 	}
@@ -106,6 +109,7 @@ Returns Wikibase::Datatype::Statement instance.
 
  obj2struct():
          Base URI is required.
+         Object doesn't exist.
          Object isn't 'Wikibase::Datatype::Statement'.
 
 =head1 EXAMPLE1
