@@ -22,6 +22,9 @@ our $VERSION = 0.02;
 sub obj2struct {
 	my ($obj, $base_uri) = @_;
 
+	if (! defined $obj) {
+		err "Object doesn't exist.";
+	}
 	if (! $obj->isa('Wikibase::Datatype::Value')) {
 		err "Object isn't 'Wikibase::Datatype::Value'.";
 	}
@@ -128,6 +131,7 @@ Returns Wikibase::Datatype::Value instance.
 =head1 ERRORS
 
  obj2struct():
+         Object doesn't exist.
          Object isn't 'Wikibase::Datatype::Value'.
          Type '%s' is unsupported.
 
