@@ -15,6 +15,9 @@ our $VERSION = 0.02;
 sub obj2struct {
 	my $obj = shift;
 
+	if (! defined $obj) {
+		err "Object doesn't exist.";
+	}
 	if (! $obj->isa('Wikibase::Datatype::Value::Monolingual')) {
 		err "Object isn't 'Wikibase::Datatype::Value::Monolingual'.";
 	}
@@ -92,6 +95,7 @@ Returns Wikibase::Datatype::Value::Monolingual instance.
 =head1 ERRORS
 
  obj2struct():
+         Object doesn't exist.
          Object isn't 'Wikibase::Datatype::Value::Monolingual'.
 
  struct2obj():
